--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-firebase-file-uploader": "^2.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-transition-group": "^2.3.1"
+    "react-transition-group": "^2.3.1",
+    "styled-components": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
