--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.3.1",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "sweetalert2": "^7.26.9"
   },
   "scripts": {
     "start": "react-scripts start",
