--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.0.4",
+    "jodit": "^3.2.9",
+    "jodit-react": "^1.0.17",
     "re-base": "^3.2.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
