--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react-geocode": "^0.1.2",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.3.1",
+    "reactstrap": "^6.3.1",
     "recompose": "^0.28.1",
     "styled-components": "^3.3.3",
     "sweetalert2": "^7.26.9"
