--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jodit-react": "^1.0.17",
     "re-base": "^3.2.3",
     "react": "^16.4.0",
+    "react-collapsible": "^2.2.0",
     "react-dom": "^16.4.0",
     "react-firebase-file-uploader": "^2.4.2",
     "react-geocode": "^0.1.2",
